--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3306/movie_master?createDatabaseIfNotExist=true
-spring.datasource.username=name
-spring.datasource.password=password
+spring.datasource.url=${DB_HOST}/movie_master?createDatabaseIfNotExist=true
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
