--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=backend
-spring.datasource.url=${DB_HOST}/movie_master?createDatabaseIfNotExist=true
+spring.datasource.url=${DB_HOST}/${DB_NAME}?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.jpa.show-sql=true
+spring.jpa.show-sql=${SHOW_SQL}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
