Removed old comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=backend
+server.servlet.context-path=/api/v1
 spring.datasource.url=${DB_HOST}/${DB_NAME}?createDatabaseIfNotExist=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
