Retrieve a user's watchlist

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=backend
 server.servlet.context-path=/api/v1
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=moviestar
-spring.datasource.url=jdbc:h2:mem:moviestar
+spring.datasource.url=${DB_HOST}/${DB_NAME}?createDatabaseIfNotExist=true
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.show-sql=${SHOW_SQL}
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
