--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=Appeltaart123!
 DB_NAME=thomaslinssen_movie_master
 SHOW_SQL=true
 CLIENT_HOST=http://localhost:3000
+TMDB_API_KEY=d77b354ceb7c6f3fa05ca458890c06b3
