--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 tmdb.api-key=${TMDB_API_KEY}
 client.host=${CLIENT_HOST}
 jwt.secret=${JWT_SECRET}
+jwt.testing=${JWT_TESTING}
