--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 tmdb.api-key=${TMDB_API_KEY}
 client.host=${CLIENT_HOST}
+default-user.name=${DEFAULT_USER_NAME}
+default-user.password=${DEFAULT_USER_PASSWORD}
