--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ default-user.name=${DEFAULT_USER_NAME}
 default-user.password=${DEFAULT_USER_PASSWORD}
 jwt.secret=${JWT_SECRET}
 jwt.testing=${JWT_TESTING}
+server.port=${PORT}
