--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - JWT_TESTING=${JWT_TESTING}
       - DEFAULT_USER_NAME=${DEFAULT_USER_NAME}
       - DEFAULT_USER_PASSWORD=${DEFAULT_USER_PASSWORD}
+      - PORT=${PORT}
     networks:
       - movie_master_network
 
