Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,5 @@ pull_app_job:
     - hva
   variables:
     PORT: 2222
-  before_script: chmod 400 $SSH_KEY
   script: 
-    - echo $SSH_USERNAME
+    - ssh
