--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,4 @@ x_job:
   variables:
     PORT: 2222
   before_script: chmod 400 $SSH_PRIVATE_KEY
-  script:
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SSH_USERNAME@$SSH_HOST "
-        echo Hello World!"
+  script: ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SSH_USERNAME@$SSH_HOST
