--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   # - build
   # - test
-  - x
+  - pull_app
 
 # build-job:
 #   stage: build
@@ -17,9 +17,9 @@ stages:
 #     - hva
 #   script: ./gradlew --build-cache test
 
-x_job:
+pull_app_job:
+  stage: pull_app
   image: docker:latest
-  stage: x
   tags:
     - hva
   variables:
@@ -28,4 +28,7 @@ x_job:
     - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
     - eval $(ssh-agent -s)
     - chmod 400 $SSH_PRIVATE_KEY
-  script: ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SSH_USERNAME@$SSH_HOST -p 2222
+  script: 
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SSH_USERNAME@$SSH_HOST -p 2222 "
+        cd app/backend
+        "
