--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,18 +19,14 @@ stages:
 
 pull_app_job:
   stage: pull_app
-  image: docker:latest
+  image: ubuntu:latest
   tags:
     - hva
   variables:
     PORT: 2222
   before_script:
-    - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
-    - eval $(ssh-agent -s)
     - chmod 400 $SSH_PRIVATE_KEY
-    - git config --global user.email "ervin.boskovic@hva.nl"
-    - git config --global user.name "boskove"
   script: 
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SSH_USERNAME@$SSH_HOST -p 2222 "
-        cd app/backend && git pull
+        cd app/backend
         "
