--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,23 +6,21 @@ stages:
   - deploy
 
 variables:
-  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-  GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" 
+  GIT_DEPTH: "0"
 
 sonarqube-check:
   stage: sonarqube-check
   image: gradle:jdk21-alpine
-  dependencies:
-    - get-binaries
-    - build
+  tags:
+    - hva
   cache:
     policy: pull
     key: "${CI_COMMIT_SHORT_SHA}"
     paths:
       - sonar-scanner/
-
-
-  script: gradle sonar
+  script: 
+    - mvn verify sonar:sonar
   allow_failure: true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
