--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,22 +5,25 @@ stages:
   - pull_project
   - deploy
 
-variables:
-  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar" 
-  GIT_DEPTH: "0"
+build-job:
+  stage: build
+  image: gradle:jdk21-alpine
+  tags:
+    - hva
+  rules:
+    - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"
+      when: always
+  script: ./gradlew build -x test
 
 sonarqube-check:
   stage: sonarqube-check
   image: gradle:jdk21-alpine
-  tags:
-    - hva
   cache:
     policy: pull
     key: "${CI_COMMIT_SHORT_SHA}"
     paths:
       - sonar-scanner/
-  script: 
-    - gradle sonar
+  script: gradle sonar
   allow_failure: true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
@@ -43,16 +46,6 @@ sonarqube-vulnerability-report:
     expire_in: 1 day
     reports:
       sast: gl-sast-sonar-report.json
-
-build-job:
-  stage: build
-  image: gradle:jdk21-alpine
-  tags:
-    - hva
-  rules:
-    - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"
-      when: always
-  script: ./gradlew build -x test
 
 pull_project_job:
   stage: pull_project
