--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ build-job:
 sonarqube-check:
   stage: sonarqube-check
   image: gradle:jdk21-alpine
+  tags:
+    - hva
   cache:
     policy: pull
     key: "${CI_COMMIT_SHORT_SHA}"
@@ -34,6 +36,8 @@ sonarqube-check:
 sonarqube-vulnerability-report:
   stage: sonarqube-vulnerability-report
   image: gradle:jdk21-alpine
+  tags:
+    - hva
   script:
     - 'curl -u "${SONAR_TOKEN}:" "${SONAR_HOST_URL}/api/issues/gitlab_sast_export?projectKey=se-specialization-2024-1_projects-tse3_drop-database_backend_63335d2d-27c8-4950-a932-d6f94f8517e4&branch=${CI_COMMIT_BRANCH}&pullRequest=${CI_MERGE_REQUEST_IID}" -o gl-sast-sonar-report.json'
   allow_failure: true
