--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,15 +17,15 @@ build-job:
 
 sonarqube-check:
   stage: sonarqube-check
-  image: gradle:8.2.0-jdk17-jammy
-  tags:
-    - hva
+  image: gradle:jdk21-alpine
+  dependencies:
+    - build-job
   cache:
     policy: pull
     key: "${CI_COMMIT_SHORT_SHA}"
     paths:
       - sonar-scanner/
-  script: gradle sonar
+  script: ./gradlew sonar
   allow_failure: true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
@@ -35,11 +35,9 @@ sonarqube-check:
 
 sonarqube-vulnerability-report:
   stage: sonarqube-vulnerability-report
-  image: gradle:8.2.0-jdk17-jammy
-  tags:
-    - hva
+  image: gradle:jdk21-alpine
   script:
-    - 'curl -u "${SONAR_TOKEN}:" "${SONAR_HOST_URL}/api/issues/gitlab_sast_export?projectKey=se-specialization-2024-1_projects-tse3_drop-database_backend_63335d2d-27c8-4950-a932-d6f94f8517e4&branch=${CI_COMMIT_BRANCH}&pullRequest=${CI_MERGE_REQUEST_IID}" -o gl-sast-sonar-report.json'
+    - 'curl -u "${SONAR_TOKEN}:" "${SONAR_HOST_URL}/api/issues/gitlab_sast_export?projectKey=se-specialization-2024-1_projects-tse3_drop-database_backend_ae7bcf3a-4eb9-416f-908b-3242b826462b&branch=${CI_COMMIT_BRANCH}&pullRequest=${CI_MERGE_REQUEST_IID}" -o gl-sast-sonar-report.json'
   allow_failure: true
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
